tests/codegen/errors/codegen/layout-dot-field/atom.codegen.diagnostic.layout-missing-field/diagnostic-layout-missing-field.mon
;; TEST-ID: tests.codegen.branch.diagnostic-layout-missing-field
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SUBSET: layout-dot-field
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.runtime-codegen-corpus, monadc.context.language.codegen-atom-web
;; TEST-PURPOSE: Exercise layout-specific missing field diagnostic.
;; TEST-ATOM: atom.codegen.diagnostic.layout-missing-field
;; TEST-CODEGEN-ATOM: atom.codegen.diagnostic.layout-missing-field
;; TEST-QUALITY: branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-CODEGEN-PATH: diagnostic.layout.missing-field
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: layout
;; TEST-COVERAGE: codegen.c:3315 layout field missing diagnostic

;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/layout-dot-field/atom.codegen.diagnostic.layout-missing-field
;; TEST-MENU-PATH: codegen/errors/codegen/layout-dot-field/atom.codegen.diagnostic.layout-missing-field
;; TEST-ATOM-LEAF: atom.codegen.diagnostic.layout-missing-field
;; TEST-CLI-TARGET: codegen errors codegen layout-dot-field
(module Main)
(layout Point [x :: Int])
(define p (Point 1))
(show p.y)
